feat: recirculate at specific temp
